챌린지에 좋아요 기능 구현 좋아요 누르기, 해제하기, 로그인한 유저의 좋아요 여부

--- a/src/main/reactjs/src/pages/lounge/Challenge.module.css
+++ b/src/main/reactjs/src/pages/lounge/Challenge.module.css
@@ -18,3 +18,13 @@
   font-size: 18px;
   font-weight: 600;
 }
+
+.like{
+  cursor: pointer;
+  color: white;
+}
+
+.like_on{
+  cursor: pointer;
+  color: red;
+}
