라운지의 챌린지 목록에서 로그인한 유저의 좋아요 여부 표시

--- a/src/main/reactjs/src/pages/lounge/ChallengeList.module.css
+++ b/src/main/reactjs/src/pages/lounge/ChallengeList.module.css
@@ -12,11 +12,6 @@
   background-color: lavender;
 }
 
-.like{
-  color: white;
-  cursor: pointer;
-}
-
 .wrap{
   padding: 10px;
 }
@@ -34,4 +29,14 @@
 .icon{
   font-size: 15px;
   color: gray;
+}
+
+.like_off{
+  cursor: pointer;
+  color: white;
+}
+
+.like_on{
+  cursor: pointer;
+  color: red;
 }
