챌린지 상세 페이지에 이미지 띄움

--- a/src/main/reactjs/src/pages/lounge/Challenge.module.css
+++ b/src/main/reactjs/src/pages/lounge/Challenge.module.css
@@ -1,7 +1,9 @@
 .photo{
   height: 300px;
-  background-color: lavender;
+  /* background-color: lavender; */
   /* border: 1px solid black; */
+  background-size: cover;
+  background-position: center center;
 }
 
 .title{
