--- a/src/main/reactjs/src/pages/report/Report.module.css
+++ b/src/main/reactjs/src/pages/report/Report.module.css
@@ -1,4 +1,21 @@
-.subtitle{
-  font-size: 24px;
+.wrap{
+  padding: 20px;
+}
+
+.title{
+  font-size: 25px;
   font-weight: 600;
+}
+
+.subtitle{
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.health_box{
+  margin-top: 20px;
+}
+
+.weight_box{
+  margin-top: 20px;
 }
