챌린지 좋아요 페이지 구현 챌린지 리스트 항목, 메뉴 타이틀 박스 컴포넌트로 분리

--- a/src/main/reactjs/src/components/Components.module.css
+++ b/src/main/reactjs/src/components/Components.module.css
@@ -1,3 +1,4 @@
+/* MenuBar.js */
 .menu{
   display: flex;
   position: fixed;
@@ -13,4 +14,33 @@
   cursor: pointer;
   font-size: 14px;
   line-height: 40px;
+}
+
+/* MenuTitle.js */
+.title_box{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 20px;
+}
+
+.title{
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.left_icon{
+  color: gray;
+  cursor: pointer;
+}
+
+.hidden{
+  visibility: hidden;
+  width: 24px;
+}
+
+.submit_btn{
+  border: none;
+  background-color: rgba(255, 255, 255, 0);
+  padding: 0;
 }
