--- a/src/main/reactjs/src/pages/lounge/ChallengeList.module.css
+++ b/src/main/reactjs/src/pages/lounge/ChallengeList.module.css
@@ -3,10 +3,32 @@
   margin-bottom: 60px;
 }
 
+.maintitle_box{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+}
+
 .maintitle{
   font-size: 25px;
   font-weight: 600;
-  padding: 20px;
+}
+
+.maintitle_box > div > span{
+  margin-left: 7px;
+  cursor: pointer;
+}
+
+.add_btn{
+  font-size: 26px;
+}
+
+.subtitle_box{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 20px;
+  margin-bottom: 10px;
 }
 
 .subtitle{
@@ -14,22 +36,20 @@
   font-weight: 600;
 }
 
-.subtitle_box{
-  display: flex;
-  justify-content: space-between;
-  padding: 0 20px;
-  /* margin-top: 10px; */
-}
-
 .box{
   width: 100%;
   height: 80px;
   /* border: 1px solid lightgray; */
   background-color: rgb(248, 248, 248);
-  margin: 10px 0;
+  /* margin: 10px 0; */
   /* border-radius: 10px; */
   display: flex;
   overflow: hidden;
+}
+
+.box:not(:last-child){
+  /* border-bottom: 1px solid #eeeeee; */
+  margin-bottom: 10px;
 }
 
 .photo{
