--- a/src/main/reactjs/src/components/Components.module.css
+++ b/src/main/reactjs/src/components/Components.module.css
@@ -17,30 +17,96 @@
 }
 
 /* MenuTitle.js */
-.title_box{
+.menu_title{
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 15px 20px;
 }
 
-.title{
+.menu_title .title{
   font-size: 20px;
   font-weight: 600;
 }
 
-.left_icon{
+.menu_title .left_icon{
   color: gray;
   cursor: pointer;
 }
 
-.hidden{
+.menu_title .hidden{
   visibility: hidden;
   width: 24px;
 }
 
-.submit_btn{
+.menu_title .submit_btn{
   border: none;
   background-color: rgba(255, 255, 255, 0);
   padding: 0;
+}
+
+/* ChallengeItem.js, LikeItem.js */
+.challenge{
+  width: 100%;
+  height: 80px;
+  /* border: 1px solid lightgray; */
+  background-color: rgb(248, 248, 248);
+  /* margin: 10px 0; */
+  /* border-radius: 10px; */
+  display: flex;
+  overflow: hidden;
+}
+
+.challenge:not(:last-child){
+  /* border-bottom: 1px solid #eeeeee; */
+  margin-bottom: 10px;
+}
+
+.challenge .photo{
+  width: 80px;
+  /* background-color: lavender; */
+  background-size: cover;
+  background-position: center center;
+}
+
+.challenge .info_wrap{
+  padding: 0 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.challenge .title{
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.challenge .info{
+  font-size: 15px;
+  color: gray;
+  display: flex;
+  align-items: center;
+}
+
+.challenge .icon{
+  font-size: 15px;
+  color: gray;
+}
+
+.challenge .group_icon{
+  margin-right: 3px;
+}
+
+.challenge .like{
+  cursor: pointer;
+  padding: 3px 2px;
+  font-size: 18px;
+}
+
+.challenge .like_off{
+  color: rgba(240, 240, 240, 0.9);
+}
+
+.challenge .like_on{
+  color: rgba(255, 0, 0, 0.85);
 }
