--- a/src/main/reactjs/src/pages/lounge/Challenge.module.css
+++ b/src/main/reactjs/src/pages/lounge/Challenge.module.css
@@ -3,7 +3,7 @@
 }
 
 .challenge_photo{
-  height: 300px;
+  height: 90vw; /* 화면 가로 너비의 90% */
   /* background-color: lavender; */
   /* border: 1px solid black; */
   background-size: cover;
@@ -22,7 +22,8 @@
   text-align: right;
   margin-bottom: 5px;
   margin-right: 3px;
-  /* padding-left: 90px; */
+  padding-left: 80px;
+  word-break: keep-all;
 }
 
 .icon{
@@ -31,7 +32,7 @@
 }
 
 .subtitle{
-  font-size: 18px;
+  font-size: 17px;
   font-weight: 600;
 }
 
@@ -42,7 +43,7 @@
 
 .like_on{
   cursor: pointer;
-  color: rgba(255, 0, 0, 0.85);
+  color: rgba(255, 0, 0, 0.8);
 }
 
 .profile_wrap{
@@ -85,13 +86,15 @@
   padding: 15px 20px;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .info_wrap span{
   color: gray;
+  font-size: 15px;
 }
 
-.content{
+pre.content{
   font-family: inherit;
   font-size: 17px;
   margin: 0;
@@ -207,14 +210,14 @@
 }
 
 .comment_wrap .nickname{
-  font-size: 13px;
+  font-size: 12px;
   font-weight: 500;
   margin-right: 5px;
 }
 
 .comment_wrap .date{
   color: gray;
-  font-size: 12px;
+  font-size: 11px;
 }
 
 .comment .photo{
@@ -239,4 +242,8 @@
 .comment .no_photo_icon{
   font-size: 21px;
   color: white;
+}
+
+.comment .content{
+  font-size: 15px;
 }
