챌린지 제목 배경에 어두운 그라데이션 넣어 글씨 잘 보이게 함

--- a/src/main/reactjs/src/pages/lounge/Challenge.module.css
+++ b/src/main/reactjs/src/pages/lounge/Challenge.module.css
@@ -13,6 +13,24 @@
   align-content: stretch;
   flex-direction: column;
   justify-content: space-between;
+
+  position: relative;
+  z-index: -2;
+}
+
+.challenge_photo::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(
+    to bottom,
+    rgba(20, 20, 20, 0) 60%,
+    rgba(20, 20, 20, 0.4) 100%
+  );
+  z-index: -1;
 }
 
 .challenge_title{
@@ -24,6 +42,8 @@
   margin-right: 3px;
   padding-left: 80px;
   word-break: keep-all;
+
+  z-index: 1;
 }
 
 .icon{
