--- a/src/main/reactjs/src/components/Components.module.css
+++ b/src/main/reactjs/src/components/Components.module.css
@@ -64,13 +64,13 @@
 
 .challenge .photo{
   width: 80px;
-  /* background-color: lavender; */
+  min-width: 80px;
   background-size: cover;
   background-position: center center;
 }
 
 .challenge .info_wrap{
-  padding: 0 15px;
+  padding: 5px 15px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
