--- a/src/main/reactjs/src/pages/mypage/Profile.module.css
+++ b/src/main/reactjs/src/pages/mypage/Profile.module.css
@@ -10,6 +10,7 @@
 
 .photo{
   width: 70px;
+  min-width: 70px;
   height: 70px;
   margin-right: 15px;
   border-radius: 100%;
@@ -18,6 +19,7 @@
 
 .no_photo{
   width: 70px;
+  min-width: 70px;
   height: 70px;
   background-color: rgb(230, 230, 230);
   border-radius: 100%;
@@ -64,6 +66,7 @@
   font-size: inherit;
   /* margin-top: 3px; */
   margin: 3px 0 0 0;
+  white-space: pre-wrap;
 }
 
 /* Tab */
