--- a/src/main/reactjs/src/pages/lounge/Challenge.module.css
+++ b/src/main/reactjs/src/pages/lounge/Challenge.module.css
@@ -195,27 +195,41 @@ pre.content{
 }
 
 /* 댓글 창 */
-/* .input_wrap{
-  border: 1px solid rgb(190, 190, 190);
-  border-radius: 15px;
-} */
+.input_wrap{
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid lightgray;
+  border-radius: 100px;
+  height: 30px;
+  margin: 10px 0;
+}
 
 .input_comment{
-  border: 1px solid rgb(230, 230, 230);
+  border: 0px solid rgb(230, 230, 230);
   border-radius: 15px;
-  width: 90%;
-  margin: 10px 0;
+  width: -webkit-fill-available;  /* 너비가 다른 요소에 영향 없을 만큼만 최대로 늘어나게 */
+  font-size: 14px;
+  padding: 0px 2px 0 11px;
+}
+
+input:focus{
+  outline:none;
 }
 
 .input_comment::placeholder{
   font-size: 12px;
   color: gray;
-  padding: 0 0 2px 8px;
+  /* padding: 0 0 2px 8px; */
 }
 
 .comment_btn{
   border: none;
   background-color: rgba(255, 255, 255, 0);
+
+  font-size: 13px;
+  color: #109577;
+  font-weight: 500;
+  padding: 0 10px;
 }
 
 /* Comment.js */
