--- a/src/main/reactjs/src/components/Components.module.css
+++ b/src/main/reactjs/src/components/Components.module.css
@@ -22,6 +22,10 @@
   justify-content: space-between;
   align-items: center;
   padding: 15px 20px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: white;
 }
 
 .menu_title .title{
