--- a/src/main/reactjs/src/pages/lounge/Challenge.module.css
+++ b/src/main/reactjs/src/pages/lounge/Challenge.module.css
@@ -1,4 +1,5 @@
 .wrap{
+  margin-top: 60px;
   margin-bottom: 50px;
 }
 
@@ -42,13 +43,9 @@
   margin-right: 3px;
   padding-left: 80px;
   word-break: keep-all;
+  overflow-wrap: break-word;  /* 띄어쓰기 없는 긴 텍스트 줄바꿈 */
 
   z-index: 1;
-}
-
-.icon{
-  font-size: 17px;
-  color: gray;
 }
 
 .subtitle{
@@ -122,9 +119,37 @@ pre.content{
   white-space: pre-wrap;
 }
 
+/* 참여한 유저 */
+.joined_user{
+  padding: 20px;
+}
+
+.subtitle_wrap{
+  /* padding: 0 20px; */
+  display: flex;
+  align-items: center;
+}
+
+.count_wrap{
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+}
+
+.count_wrap .icon{
+  font-size: 16px;
+  color: rgb(150, 150, 150);
+}
+
+.count_wrap .count{
+  font-size: 14px;
+  color: gray;
+}
+
 .users_wrap{
   display: flex;
-  padding: 10px 20px;
+  padding: 10px 0 0 0;
+  overflow: scroll;
 }
 
 .users_wrap .user{
