--- a/src/main/reactjs/src/pages/lounge/NewChallenge.module.css
+++ b/src/main/reactjs/src/pages/lounge/NewChallenge.module.css
@@ -1,3 +1,126 @@
+input:focus, textarea, select:focus, option:focus, button:focus{
+  outline:none;
+}
+
+.hidden{
+  display: none;
+}
+
 .wrap{
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
+  margin-top: 60px;
+}
+
+.main{
+  padding: 0 20px;
+}
+
+/* 사진 */
+.no_image{
+  width: 100vw;
+  height: 80vw;
+  max-height: 50vh;
+  background-color: rgb(245, 245, 245);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.no_image .add_icon{
+  color: rgb(210, 210, 210);
+  font-size: 80px;
+}
+
+.preview{
+  width: 100vw;
+  height: 80vw;
+  /* height: -webkit-fill-available; */
+  object-fit: cover;
+  object-position: center center;
+}
+
+.main>div{
+  margin: 20px 0;
+}
+
+.main .subtitle{
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.title_wrap input, .content_wrap textarea{
+  width: 100%;
+  border: none;
+  border-radius: 8px;
+  background-color: rgb(245, 245, 245);
+  resize: none;
+  padding: 10px;
+}
+
+.main>div:nth-child(n + 3){ /* 3번째 ~ */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.limit_wrap{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.limit_wrap .btn_wrap{
+  display: flex;
+  align-items: center;
+}
+
+.limit_wrap .limit_btn{
+  color: rgb(80, 80, 80);
+  /* margin: 0 15px; */
+  cursor: pointer;
+}
+
+.limit_wrap .limit_btn_disable{
+  color: rgb(220, 220, 220);
+  /* margin: 0 15px; */
+  /* cursor: pointer; */
+}
+
+.limit_wrap .count{
+  width: 80px;
+  display: flex;
+  justify-content: center;
+}
+
+/* Datetime */
+.date_picker{
+  border: none;
+  background-color: rgb(245, 245, 245);
+  border-radius: 8px;
+  padding: 5px 10px;
+  width: 220px;
+  color: #212529;
+}
+
+/* Area, Gender radio button group */
+.btn_wrap label{
+  margin-left: 10px;
+}
+
+.btn_wrap label span{
+  margin-left: 5px;
+}
+
+/* Area */
+.area_input{
+  width: 150px;
+  border: none;
+  border-radius: 8px;
+  background-color: rgb(245, 245, 245);
+  padding: 5px 10px;
+}
+
+/* Age */
+.age_wrap select.form-select.form-select-sm{
+  width: 90px !important;
 }
