--- a/src/main/reactjs/src/pages/mypage/ProfileEdit.module.css
+++ b/src/main/reactjs/src/pages/mypage/ProfileEdit.module.css
@@ -1,3 +1,11 @@
+input:focus, textarea{
+  outline:none;
+}
+
+.profile_edit_wrap{
+  margin-top: 60px;
+}
+
 .wrap{
   margin: 20px 30px;
 }
@@ -20,7 +28,7 @@
 .photo_box{
   /* margin: 0 auto; */
   text-align: center;
-  margin-top: 20px;
+  padding-top: 20px;
 }
 
 .photo{
