--- a/src/main/reactjs/src/pages/lounge/NewChallenge.module.css
+++ b/src/main/reactjs/src/pages/lounge/NewChallenge.module.css
@@ -48,8 +48,17 @@ input:focus, textarea, select:focus, option:focus, button:focus{
   font-weight: 500;
 }
 
-.title_wrap input, .content_wrap textarea{
+.title_wrap input{
   width: 100%;
+  border: none;
+  border-radius: 8px;
+  background-color: rgb(245, 245, 245);
+  padding: 10px;
+}
+
+.content_wrap textarea{
+  width: 100%;
+  height: 93px;
   border: none;
   border-radius: 8px;
   background-color: rgb(245, 245, 245);
