--- a/src/main/reactjs/src/pages/login/Join.module.css
+++ b/src/main/reactjs/src/pages/login/Join.module.css
@@ -6,7 +6,7 @@
   font-size: 25px;
   font-weight: 800;
   /* color: #69e4b8; */
-  color: #69e4cd;
+  color: #86dbcb;
 }
 
 .first_join_wrap{
@@ -40,7 +40,7 @@
 
 .input{
   border: none;
-  border-bottom: 1px solid #69e4cd;
+  border-bottom: 1px solid #86dbcb;
   width: 100%;
   height: 40px;
 }
@@ -67,7 +67,7 @@
   justify-content: center;
   align-items: center;
   /* color: white; */
-  box-shadow: 0 5px 15px rgba(105, 228, 205, 0.3);
+  box-shadow: 0 5px 15px rgba(134, 219, 203, 0.3);
   border-radius: 8px;
   margin-left: 8px;
   font-size: 15px;
@@ -75,7 +75,7 @@
 }
 
 .gender.active{
-  background-color: #69e4cd;
+  background-color: #86dbcb;
   color: white;
   font-weight: 700;
   box-shadow: none;
@@ -85,11 +85,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 30px 0;
+  margin: 50px 0;
 }
 
 .input_wrap{
-  border-bottom: 1px solid rgb(105, 228, 205);
+  border-bottom: 1px solid #86dbcb;
   display: flex;
   align-items: center;
   justify-content: space-between;
