건강점수 차트 오류 수정

--- a/src/main/reactjs/src/pages/report/Report.module.css
+++ b/src/main/reactjs/src/pages/report/Report.module.css
@@ -21,6 +21,15 @@
   text-align: center;
   margin: 0 auto;
   margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.chart_wrap > div{
+  /* margin: 0;
+  width: 100%; */
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .weight_box{
