--- a/src/main/reactjs/src/pages/settings/Settings.module.css
+++ b/src/main/reactjs/src/pages/settings/Settings.module.css
@@ -6,3 +6,20 @@
   font-size: 25px;
   font-weight: 600;
 }
+
+.btn_wrap{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.btn_item{
+  width: 300px;
+  padding: 20px;
+  cursor: pointer;
+}
+
+.btn_item:not(:last-child){
+  border-bottom: 1px solid #ddd;
+}
