알림창 페이지 추가

--- a/src/main/reactjs/src/pages/mypage/Profile.module.css
+++ b/src/main/reactjs/src/pages/mypage/Profile.module.css
@@ -69,6 +69,13 @@
   white-space: pre-wrap;
 }
 
+.noti_btn{
+  position: fixed;
+  top: 25px;
+  right: 20px;
+  cursor: pointer;
+}
+
 /* Tab */
 /* icon */
 /* .css-i4bv87-MuiSvgIcon-root{
