알림 기능 구현 유저가 챌린지에 참여하면 개설한 유저에게 알림

--- a/src/main/reactjs/src/pages/mypage/Profile.module.css
+++ b/src/main/reactjs/src/pages/mypage/Profile.module.css
@@ -108,3 +108,18 @@
 .tabs .icon{
   color: rgb(170, 170, 170);
 }
+
+/* Notification.js */
+.noti_wrap{
+  margin-top: 60px;
+  padding: 20px;
+}
+
+.noti_box{
+  height: 60px;
+  /* padding: 20px; */
+}
+
+.noti_box:not(:last-child){
+  border-bottom: 1px solid #eee;
+}
