--- a/src/main/reactjs/src/pages/mypage/Profile.module.css
+++ b/src/main/reactjs/src/pages/mypage/Profile.module.css
@@ -112,14 +112,28 @@
 /* Notification.js */
 .noti_wrap{
   margin-top: 60px;
-  padding: 20px;
+  padding: 0 20px;
 }
 
 .noti_box{
-  height: 60px;
-  /* padding: 20px; */
+  /* height: 60px; */
+  padding: 15px 10px;
 }
 
 .noti_box:not(:last-child){
   border-bottom: 1px solid #eee;
+}
+
+.noti{
+  cursor: pointer;
+}
+
+.bold{
+  font-weight: 600;
+}
+
+.time{
+  font-size: 13px;
+  color: rgb(160, 160, 160);
+  margin-left: 6px;
 }
