--- a/src/main/reactjs/src/pages/login/Join.module.css
+++ b/src/main/reactjs/src/pages/login/Join.module.css
@@ -47,6 +47,9 @@
   border-bottom: 1px solid #86dbcb;
   width: 100%;
   height: 40px;
+  border-radius: 0;
+  padding: 10px;
+  margin-top: 10px;
 }
 
 .second_join_wrap{
