--- a/src/main/reactjs/src/pages/login/Login.module.css
+++ b/src/main/reactjs/src/pages/login/Login.module.css
@@ -27,6 +27,9 @@
   border-bottom: 1px solid #86dbcb;
   width: 100%;
   height: 40px;
+  border-radius: 0;
+  padding: 10px;
+  margin-top: 10px;
 }
 
 .btn_box{
