개설한 챌린지의 상태를 종료, 모집중, 모집완료로 구분, 챌린지 개설 날짜의 역순으로 정렬 참여한 챌린지의 상태를 성공, 예정으로 구분, 챌린지 예정 날짜의 역순으로 정렬 챌린지 목록 디자인 변경

--- a/src/main/reactjs/src/pages/lounge/Challenge.module.css
+++ b/src/main/reactjs/src/pages/lounge/Challenge.module.css
@@ -210,12 +210,17 @@ pre.content{
   /* margin-bottom: 10px; */
 }
 
-.gray_btn{
+.light_gray_btn{
   background-color: rgb(240, 240, 240);
 }
 
+.gray_btn{
+  background-color: rgb(130, 130, 130);
+  color: white;
+}
+
 .green_btn{
-  background-color: rgb(113, 213, 152);
+  background-color: #86dbcb;
   color: white;
 }
 
