--- a/src/main/reactjs/src/components/Components.module.css
+++ b/src/main/reactjs/src/components/Components.module.css
@@ -120,3 +120,87 @@
 .challenge .like_on{
   color: rgba(255, 0, 0, 0.80);
 }
+
+/* ProfileChallengeItem.js */
+.profile_challenge{
+  width: 100%;
+  height: 80px;
+  /* border: 1px solid lightgray; */
+  /* background-color: rgb(248, 248, 248); */
+  /* margin: 10px 0; */
+  /* border-radius: 10px; */
+  display: flex;
+  overflow: hidden;
+  padding: 0 10px;
+  margin-top: 10px;
+}
+
+.profile_challenge:not(:last-child){
+  /* border-bottom: 1px solid #eeeeee; */
+  /* margin-bottom: 10px; */
+}
+
+.profile_challenge .photo{
+  width: 80px;
+  min-width: 80px;
+  background-size: cover;
+  background-position: center center;
+  border-radius: 7px;
+}
+
+.profile_challenge .info_wrap{
+  /* padding: 0px 15px; */
+  margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.profile_challenge .title{
+  font-weight: 600;
+  cursor: pointer;
+
+  /* 텍스트 라인 수 제한(1) */
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+}
+
+.profile_challenge .info{
+  font-size: 15px;
+  color: gray;
+  display: flex;
+  align-items: center;
+}
+
+.profile_challenge .icon{
+  font-size: 15px;
+  color: gray;
+}
+
+.profile_challenge .group_icon{
+  margin-right: 3px;
+}
+
+.profile_challenge .status{
+  /* background-color: #f0f0f0; */
+  padding: 3px 6px;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.profile_challenge .mint{
+  background-color: #beeee5;
+  color: white;
+  font-weight: 700;
+}
+
+.profile_challenge .gray  {
+  background-color: #f0f0f0;
+}
+
+.profile_challenge .activate  {
+  background-color: #f0f0f0;
+  color: rgb(255, 88, 88);
+}
