--- a/src/main/reactjs/src/pages/lounge/Challenge.module.css
+++ b/src/main/reactjs/src/pages/lounge/Challenge.module.css
@@ -149,7 +149,11 @@ pre.content{
 .users_wrap{
   display: flex;
   padding: 10px 0 0 0;
-  overflow: scroll;
+  overflow-x: scroll;
+}
+
+.users_wrap::-webkit-scrollbar{
+  display: none;
 }
 
 .users_wrap .user{
@@ -201,33 +205,43 @@ pre.content{
 }
 
 .join_btn{
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 50px;
-  border: none;
+  /* border: none; */
   /* border-radius: 10px; */
   font-weight: 600;
   font-size: 18px;
   /* margin-bottom: 10px; */
 }
 
-.light_gray_btn{
+.light_btn{
   background-color: rgb(240, 240, 240);
 }
 
-.gray_btn{
+.dark_btn{
   background-color: rgb(130, 130, 130);
   color: white;
 }
 
-.green_btn{
+.mint_btn{
   background-color: #86dbcb;
   color: white;
+}
+
+.click_btn{
+  background-color: #86dbcb;
+  color: white;
+  cursor: pointer;
 }
 
 /* 댓글 창 */
 .input_wrap{
   display: flex;
   justify-content: space-between;
+  align-items: center;
   border: 1px solid lightgray;
   border-radius: 100px;
   height: 30px;
@@ -236,6 +250,7 @@ pre.content{
 
 .input_comment{
   border: 0px solid rgb(230, 230, 230);
+  background-color: rgba(255, 255, 255, 0);
   border-radius: 15px;
   width: -webkit-fill-available;  /* 너비가 다른 요소에 영향 없을 만큼만 최대로 늘어나게 */
   font-size: 14px;
@@ -256,9 +271,9 @@ input:focus{
   border: none;
   background-color: rgba(255, 255, 255, 0);
 
-  font-size: 13px;
-  color: #109577;
-  font-weight: 500;
+  font-size: 20px;
+  color: #999999;
+  /* font-weight: 500; */
   padding: 0 10px;
 }
 
