--- a/src/main/reactjs/src/pages/lounge/Challenge.module.css
+++ b/src/main/reactjs/src/pages/lounge/Challenge.module.css
@@ -328,3 +328,44 @@ input:focus{
 .comment .content{
   font-size: 15px;
 }
+
+/* MenuTitle.js */
+.menu_title{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 20px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: white;
+}
+
+.menu_title .title{
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.menu_title .left_icon{
+  color: gray;
+  cursor: pointer;
+}
+
+.menu_title .hidden{
+  visibility: hidden;
+  width: 24px;
+}
+
+.menu_title .submit_btn{
+  border: none;
+  background-color: rgba(255, 255, 255, 0);
+  padding: 0;
+}
+
+.menu_wrap > button#long-button.css-78trlr-MuiButtonBase-root-MuiIconButton-root{
+  padding: 0 !important;
+}
+
+.menu_wrap > button#long-button{
+  padding: 0 !important;
+}
