--- a/src/main/reactjs/src/pages/mypage/Profile.module.css
+++ b/src/main/reactjs/src/pages/mypage/Profile.module.css
@@ -69,10 +69,21 @@
   white-space: pre-wrap;
 }
 
-.noti_btn{
-  position: fixed;
+.btn_wrap{
+  position: absolute;
   top: 25px;
   right: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.add_btn{
+  /* font-size: 28px; */
+  cursor: pointer;
+}
+
+.noti_btn{
+  margin-left: 10px;
   cursor: pointer;
 }
 
