--- a/src/main/reactjs/src/pages/feed/feed.module.css
+++ b/src/main/reactjs/src/pages/feed/feed.module.css
@@ -43,14 +43,18 @@
   display: flex;
   overflow-x: scroll;
   /* overflow-y: visible; */
-  height: 70px;
-  align-items: flex-end;
+  height: 83px;
+  align-items: center;
+}
+
+.photo_wrap::-webkit-scrollbar{
+  display: none;
 }
 
 .add_photo_box{
   background-color: rgb(245, 245, 245);
-  width: 60px;
-  height: 60px;
+  width: 70px;
+  height: 70px;
   border-radius: 8px;
 
   display: flex;
@@ -68,11 +72,11 @@
 }
 
 .preview{
-  width: 60px;
-  min-width: 60px;
-  height: 60px;
+  width: 70px;
+  min-width: 70px;
+  height: 70px;
   border-radius: 8px;
-  box-shadow: 0 5px 15px rgba(220, 220, 220, 0.5);
+  box-shadow: 0px 0px 6px rgb(220 220 220 / 40%);
   margin-left: 10px;
   object-fit: cover;
   background-size: cover;
@@ -80,8 +84,8 @@
 
 .delete_btn{
   position: relative;
-  top: -6px;
-  right: -46px;
+  top: -5px;
+  right: -57px;
   color: rgb(130, 130, 130);
   font-size: 18px;
   /* padding: 3px; */
@@ -91,11 +95,11 @@
 
 .content{
   width: 100%;
-  height: -webkit-fill-available;
+  height: 44px;
   margin-top: 30px;
   border: none;
   border-radius: 8px;
-  background-color: rgb(245, 245, 245);
+  /* background-color: rgb(245, 245, 245); */
   resize: none;
   padding: 10px;
 }
@@ -106,16 +110,69 @@
 
 .new_feed .subtitle{
   font-weight: 600;
+}
 
+.tag_box{
+  margin-top: 20px;
+}
+
+.tag_box .subtitle{
+  margin-bottom: 10px;
+}
+
+.tag_wrap{
+  display: flex;
+  overflow-x: scroll;
+}
+
+.tag_input_wrap{
+  border: 1px solid rgb(230, 230, 230);
+  background-color: transparent;
+  border-radius: 10px;
+  font-size: 14px;
+  padding: 0 8px;
+  margin-left: 5px;
+  white-space: nowrap;
+}
+
+.tag_input{
+  border: white;
+  background-color: transparent;
+  width: 53px;
+  min-width: 53px;
+  font-size: 14px;
+}
+
+.new_feed .tag{
+  background-color: rgb(245, 245, 245);
+  padding: 0 8px;
+  border-radius: 10px;
+  font-size: 14px;
+  margin: 0 5px;
+  white-space: nowrap;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center
+}
+
+.weight_wrap{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.weight_wrap .subtitle{
+  /* margin-right: -webkit-fill-available; */
 }
 
 .new_feed .input_wrap{
-  border-bottom: 1px solid #86dbcb;
+  /* border-bottom: 1px solid #86dbcb; */
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 15px;
-  width: 100px;
+  width: 150px;
 }
 
 .new_feed .narrow_input{
