--- a/src/main/reactjs/src/pages/feed/feed.module.css
+++ b/src/main/reactjs/src/pages/feed/feed.module.css
@@ -10,6 +10,7 @@
   top: 0;
   width: 100%;
   background-color: white;
+  box-shadow: 0px 0px 10px 0px rgb(245 245 245 / 90%);
 }
 
 .menu_title .title{
