--- a/src/main/reactjs/src/pages/mypage/Profile.module.css
+++ b/src/main/reactjs/src/pages/mypage/Profile.module.css
@@ -154,3 +154,29 @@
   color: rgb(160, 160, 160);
   word-break: break-word;
 }
+
+/* FeedList.js */
+.feed_wrap{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2px;
+  grid-gap: 2px;
+}
+
+.feed_photo{
+  width: 100%;
+  height: 130px; /* 임시 */
+  position: relative;
+  background-size: cover;
+}
+
+.feed_photo::after{
+  display: block;
+  padding-bottom: 100%;
+}
+
+.feed_photo_inner{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
