챌린지 상세페이지의 참여중 버튼 색상 변경

--- a/src/main/reactjs/src/pages/lounge/Challenge.module.css
+++ b/src/main/reactjs/src/pages/lounge/Challenge.module.css
@@ -218,6 +218,12 @@ pre.content{
   /* margin-bottom: 10px; */
 }
 
+.unjoin_btn{
+  background-color: #b3e1d8;
+  color: white;
+  cursor: pointer;
+}
+
 .light_btn{
   background-color: rgb(240, 240, 240);
 }
