피드 좋아요 기능 구현

--- a/src/main/reactjs/src/pages/mypage/Profile.module.css
+++ b/src/main/reactjs/src/pages/mypage/Profile.module.css
@@ -168,6 +168,7 @@
   height: 129px; /* 임시 */
   position: relative;
   background-size: cover;
+  background-position: center;
 }
 
 .feed_photo::after{
