--- a/src/main/reactjs/src/components/Components.module.css
+++ b/src/main/reactjs/src/components/Components.module.css
@@ -70,7 +70,7 @@
   width: 80px;
   min-width: 80px;
   background-size: cover;
-  background-position: center center;
+  background-position: center;
 }
 
 .challenge .info_wrap{
@@ -144,7 +144,7 @@
   width: 80px;
   min-width: 80px;
   background-size: cover;
-  background-position: center center;
+  background-position: center;
   border-radius: 7px;
 }
 
