--- a/src/main/reactjs/src/pages/feed/feed.module.css
+++ b/src/main/reactjs/src/pages/feed/feed.module.css
@@ -85,6 +85,7 @@
   margin-left: 10px;
   object-fit: cover;
   background-size: cover;
+  background-position: center;
 }
 
 .new_feed .delete_btn{
@@ -207,6 +208,22 @@
   margin-right: 10px;
 }
 
+.feed_detail .no_photo{
+  width: 30px;
+  height: 30px;
+  background-color: rgb(230, 230, 230);
+  border-radius: 100%;
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.feed_detail .no_photo_icon{
+  font-size: 20px;
+  color: white;
+}
+
 .feed_detail .user_name{
   font-size: 14px;
   font-weight: 600;
@@ -229,17 +246,24 @@
 }
 
 .feed_detail .btn_wrap .like_off{
+  cursor: pointer;
+}
 
+.feed_detail .btn_wrap .like_on{
+  cursor: pointer;
+  color: red;
 }
 
 .feed_detail .btn_wrap .comment_btn{
   font-size: 23px;
   margin-left: 18px;
+  cursor: pointer;
 }
 
 .feed_detail .btn_wrap .share_btn{
   /* font-size: 23px; */
   margin-left: 18px;
+  cursor: pointer;
 }
 
 .feed_detail .content{
