--- a/src/main/reactjs/src/pages/lounge/Challenge.module.css
+++ b/src/main/reactjs/src/pages/lounge/Challenge.module.css
@@ -8,7 +8,7 @@
   /* background-color: lavender; */
   /* border: 1px solid black; */
   background-size: cover;
-  background-position: center center;
+  background-position: center;
   padding: 10px;
   display: flex;
   align-content: stretch;
