--- a/src/main/reactjs/src/pages/feed/feed.module.css
+++ b/src/main/reactjs/src/pages/feed/feed.module.css
@@ -10,6 +10,7 @@
   top: 0;
   width: 100%;
   background-color: white;
+  z-index: 1;
 }
 
 .feed_detail .menu_title{
@@ -279,12 +280,18 @@
 }
 
 .feed_detail .content{
-  margin-top: 20px;
+  font-family: inherit;
+  font-size: 16px;
+  margin: 0;
+  margin-top: 15px;
+  /* padding: 10px 20px; */
+  white-space: pre-wrap;
 }
 
 .feed_detail .tag_wrap{
   display: flex;
-  margin-top: 20px;
+  flex-wrap: wrap;
+  margin-top: 10px;
 }
 
 .feed_detail .tag{
@@ -292,6 +299,7 @@
   background-color: rgb(245, 245, 245);
   border-radius: 11px;
   font-size: 14px;
+  margin-top: 7px;
 }
 
 .feed_detail .tag:not(:last-child){
