--- a/src/main/reactjs/src/App.css
+++ b/src/main/reactjs/src/App.css
@@ -4,3 +4,17 @@
   height: 6px !important;
   margin: 0 5px !important;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
+  -webkit-transition: background-color 9999s ease-out;
+  box-shadow: 0 0 0px 1000px white inset !important;
+  -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+}
+
+input:focus, textarea, select:focus, option:focus, button:focus{
+  outline:none;
+}
