--- a/src/main/reactjs/src/pages/login/Join.module.css
+++ b/src/main/reactjs/src/pages/login/Join.module.css
@@ -13,6 +13,15 @@
   padding: 30px;
 }
 
+.used_email{
+  height: 0;
+  font-size: 13px;
+  font-weight: 500;
+  color: rgb(235, 0, 0);
+  padding-left: 10px;
+  margin-top: 2px;
+}
+
 .next_btn_wrap{
   display: flex;
   align-items: center;
@@ -74,7 +83,7 @@
   justify-content: center;
   align-items: center;
   /* color: white; */
-  box-shadow: 0 5px 15px rgba(134, 219, 203, 0.5);
+  box-shadow: 1px 1px 9px rgb(134 219 203 / 50%);
   border-radius: 8px;
   margin-left: 8px;
   font-size: 15px;
