--- a/src/main/reactjs/src/pages/feed/Hashtags.css
+++ b/src/main/reactjs/src/pages/feed/Hashtags.css
@@ -28,7 +28,7 @@
   border: 1px solid rgb(230, 230, 230);
   border-radius: 10px;
   min-width: 50px;
-  font-size: 15px;
+  /* font-size: 15px; */
   padding: 4.5px 9px 4.5px 9px;
   /* line-height: 18px; */
 }
