--- a/src/main/reactjs/src/components/Comment.module.css
+++ b/src/main/reactjs/src/components/Comment.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   border: 1px solid lightgray;
   border-radius: 100px;
-  height: 30px;
+  height: 32px;
   margin: 10px 0;
 }
 
@@ -14,7 +14,7 @@
   background-color: rgba(255, 255, 255, 0);
   border-radius: 15px;
   width: -webkit-fill-available;  /* 너비가 다른 요소에 영향 없을 만큼만 최대로 늘어나게 */
-  font-size: 14px;
+  /* font-size: 14px; */
   padding: 0px 2px 0 11px;
 }
 
