--- a/src/main/reactjs/src/pages/mypage/Profile.module.css
+++ b/src/main/reactjs/src/pages/mypage/Profile.module.css
@@ -166,7 +166,7 @@
 
 .feed_photo{
   width: 100%;
-  height: 129px; /* 임시 */
+  height: 33.3vw; /* 임시 */
   position: relative;
   background-size: cover;
   background-position: center;
