--- a/src/main/reactjs/src/pages/lounge/NewChallenge.module.css
+++ b/src/main/reactjs/src/pages/lounge/NewChallenge.module.css
@@ -8,7 +8,7 @@ input:focus, textarea, select:focus, option:focus, button:focus{
 
 .wrap{
   /* margin-bottom: 20px; */
-  margin-top: 60px;
+  margin-top: 57px;
 }
 
 .main{
@@ -165,4 +165,11 @@ input:focus, textarea, select:focus, option:focus, button:focus{
   border: none;
   background-color: rgba(255, 255, 255, 0);
   padding: 0;
+}
+
+.menu_title .disabled_submit_btn{
+  border: none;
+  background-color: rgba(255, 255, 255, 0);
+  padding: 0;
+  color: rgb(230, 230, 230);
 }
