알림, 댓글 시간을 '몇분 전'의 포맷으로 표시되게 변경

--- a/src/main/reactjs/src/pages/mypage/notification.module.css
+++ b/src/main/reactjs/src/pages/mypage/notification.module.css
@@ -1,16 +1,16 @@
 /* Notification.js */
 .noti_list{
   margin-top: 57px;
-  padding: 0 15px;
+  padding: 0 10px;
 }
 
 .noti_box{
   /* height: 60px; */
-  padding: 10px 10px;
+  padding: 10px 5px;
 }
 
 .noti_box:not(:last-child){
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid rgb(242, 242, 242);
 }
 
 .noti{
