--- a/src/main/reactjs/src/pages/feed/feed.module.css
+++ b/src/main/reactjs/src/pages/feed/feed.module.css
@@ -40,6 +40,16 @@
   border: none;
   background-color: rgba(255, 255, 255, 0);
   padding: 0;
+  font-weight: 600;
+  color: #4bc9b2;
+}
+
+.menu_title .disabled_submit_btn{
+  border: none;
+  background-color: rgba(255, 255, 255, 0);
+  padding: 0;
+  color: rgb(225, 225, 225);
+  font-weight: 600;
 }
 
 /* 메인화면 */
