--- a/src/main/reactjs/src/pages/lounge/Challenge.module.css
+++ b/src/main/reactjs/src/pages/lounge/Challenge.module.css
@@ -106,15 +106,19 @@
 }
 
 .info_wrap{
-  padding: 15px 20px;
+  padding: 15px 10px;
   display: flex;
   align-items: center;
   justify-content: center;
+
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .info_wrap span{
   color: gray;
   font-size: 15px;
+  flex-shrink: 0;
 }
 
 pre.content{
