--- a/src/main/reactjs/src/pages/lounge/NewChallenge.module.css
+++ b/src/main/reactjs/src/pages/lounge/NewChallenge.module.css
@@ -165,11 +165,14 @@ input:focus, textarea, select:focus, option:focus, button:focus{
   border: none;
   background-color: rgba(255, 255, 255, 0);
   padding: 0;
+  font-weight: 600;
+  color: #4bc9b2;
 }
 
 .menu_title .disabled_submit_btn{
   border: none;
   background-color: rgba(255, 255, 255, 0);
   padding: 0;
-  color: rgb(230, 230, 230);
+  color: rgb(225, 225, 225);
+  font-weight: 600;
 }
