챌린지 유형(선착순, 승인제) 체크박스로 변경하여 승인제로 원할 때만 체크

--- a/src/main/reactjs/src/components/Components.module.css
+++ b/src/main/reactjs/src/components/Components.module.css
@@ -200,6 +200,13 @@
   color: gray;
   display: flex;
   align-items: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  
+}
+
+.profile_challenge .info > span{
+  flex-shrink: 0;
 }
 
 .profile_challenge .icon{
