챌린지 검색 결과가 없으면 '검색 결과가 없습니다.' 문구 표시

--- a/src/main/reactjs/src/pages/lounge/Search.module.css
+++ b/src/main/reactjs/src/pages/lounge/Search.module.css
@@ -33,3 +33,17 @@
 .list_wrap{
   margin-top: 75px;
 }
+
+.no_result{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  color: gray;
+}
+
+@supports (height: 100dvh) {
+  .no_result{
+    height: 100dvh;
+  }
+}
